objects/Request_Hub_Favorite__c.object
<CustomObject>
    <description>This is object is use to keep track the association between the user and request hub favorite item. data are added at real time base on the User selection from request hub lightning UI.</description>
    <fields>
        <fullName>Favorite_On__c</fullName>
        <defaultValue>true</defaultValue>
        <description>checked if the associated request hub item is marked as favorite.</description>
        <label>Favorite On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Hub_Items__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>the request hub item has been marked as favorite item by the associated user</description>
        <label>Request Hub Items</label>
        <referenceTo>Request_Hub_Items__c</referenceTo>
        <relationshipLabel>Request Hub Favorites</relationshipLabel>
        <relationshipName>Request_Hub_Favorites</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>user that has favorite request hub item</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Request_Hub_Favorites</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Request Hub Favorite</label>
    <nameField>
        <displayFormat>RI-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Hub Favorites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>